styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');

:root {
  --primary-color: #1B1725   ;
  --secondary-color: #534B62 ;
  --accent1-color: #A499B3;
  --accent2-color: #D0BCD5;

  --heading-font: "Lato", Helvetica, sans-serif;
  --paragraph-font: "EB Garamond", Helvetica, sans-serif;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: #1B1725;  /* headlines on a white background */ 
  --headline-color-on-color: white; /* headlines on a colored background */ 
  --paragraph-color-on-white: #1B1725; /* paragraph text on a white background */ 
  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
  --paragraph-background-color: #1B1725  ;
  --nav-link-color: #1B1725;
  --nav-background-color: #A499B3;
  --nav-hover-link-color: white;
  --nav-hover-background-color: #1B1725;
}

body {
    background: black;
    margin: 0 auto;
}

.home-parallax {
    background-image: url("../images/brandi-redd-white-background-large.webp");
    font-size: 3em;
  
    min-height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
  
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.page-title {
    color: var(--headline-color-on-white);
    -webkit-text-stroke-width: 1.5px;
    -webkit-text-stroke-color: var(--accent2-color);
    text-shadow: 0 0 50px black;
}

h1, h2, h3, h5, h6 {
    font-family: var(--heading-font);
    color: var(--headline-color-on-color);
    font-size: 2em;
}

h4 {
    font-family: var(--heading-font);
    color: var(--headline-color-on-color);
    font-size: 1.5em;
}

p {
    font-family: var(--paragraph-font);
    color: var(--paragraph-color-on-color);
    padding: 0.25em;
    font-size: 1.5em;
}

ul {
    font-family: var(--paragraph-font);
    color: var(--paragraph-color-on-color);
    padding: 0.25em;
    font-size: 1.5em;
    list-style-type: disc;
    list-style-position: inside;
}

.home-grid {
    display: grid;
    grid-template-columns: 1fr;
    margin: 0% 5%;
}

.home-grid img {
    border-radius: 50px;
    margin: 25px 0px;
    border: 5px solid var(--accent1-color);
    box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.2); 
}

.home-grid .home-text {
    margin: 5%;
}

header {
    padding: 10px;
    color: var(--headline-color-on-color);
    background-color: var(--paragraph-background-color);
    display: grid;
    grid-template-columns: 1fr;
    text-align: center;
    align-content: stretch;
}

.logo {
    width: 7em;
    margin: 10px;
}

.logo:hover {
    box-shadow: 0px 0px 20px rgb(255, 255, 255); 
    border-radius: 100%;
}

nav {
    background-color: var(--nav-background-color);
    line-height: 3em;
    text-align: center;
    font-size: 1.5em;
    display: grid;
    grid-template-columns: 1fr;
    padding: 0.25em;
    font-weight: bold;
    border-radius: 10px;
    font-family: "Lato", Helvetica, sans-serif;
}

nav a {
    min-width: 120px;
    text-decoration: none;
    padding: 0.5em 3em;
}

nav a:link, nav a:visited {
    color: var(--nav-link-color);
    text-shadow: 0 0 50px white;
}

nav a:hover {
    color: var(--nav-hover-link-color);
    background-color: var(--nav-hover-background-color);
    border-radius: 5px;
    border-color: var(--secondary-color);
}

footer {
    padding: 1em;
    color: var(--headline-color-on-color);
    background-color: var(--paragraph-background-color);
    display: grid;
    grid-template-columns: 1fr;
    text-align: center;
    align-content: stretch;
}

footer a {
    color: var(--paragraph-color-on-color);
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
    color: var(--accent1-color)
}

.social img {
    width: 5em;
    text-align: right;
    margin: 0.5em;
}

.social img:hover {
    box-shadow: 0px 0px 20px rgb(255, 255, 255); 
    border-radius: 100%;
}

@media (min-width: 768px) {
    .logo {
        width: 5em;
    }
    header {
        grid-template-columns: 25% 1fr;
        text-align: left;
    }
    .home-grid {
        grid-template-columns: 1fr 60%;
    }
    .home-text {
        grid-column: 2/3;
        grid-row: 1/2;
    }
    .home-grid img {
        border-radius: 50px;
        margin: 50px 0px;
    }
    nav {
        grid-template-columns: repeat(3, 1fr);
    }
    footer {
        grid-template-columns: repeat(3, 1fr);
    }
    footer .copy {
        text-align: left;
    }
    footer .social {
        text-align: right;
    }
}

